--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -15,20 +15,24 @@
       font-weight: 600;
       font-size: 18px;
       line-height: 22px;
-      span {
-        margin: 0 10px;
-        padding: 0 15px 5px 15px;
-        display: block;
 
-        &.selected {
-          border-bottom: 2px solid #fff;
+      ul {
+        display: flex;
+        li {
+          margin: 0 10px;
+          padding: 0 15px 5px 15px;
+          display: block;
+  
+          &.selected {
+            border-bottom: 2px solid #fff;
+          }
         }
-      }
-      span:first-child {
-        margin-left: 0;
-      }
-      span:last-child {
-        margin-right: 0;
+        li:first-child {
+          margin-left: 0;
+        }
+        li:last-child {
+          margin-right: 0;
+        }
       }
     }
   }
@@ -39,6 +43,7 @@
     justify-content: space-between;
     align-items: center;
     font-weight: 700;
+    font-size: 18px;
     letter-spacing: 0.1em;
     span {
       font-weight: 400;
